# cedar

./: '  .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
benches/: bench.rs
examples/: local.rs
src/: lib.rs
src/client/: local.rs  mod.rs
src/collection/: mod.rs
src/db/: duckdb.rs  mod.rs  model.rs
src/embeddings/: mod.rs  openai.rs  sentencetransformer.rs
src/index/: mod.rs
src/server/: mod.rs  warp_server.rs
