[package]
name = "cedar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = { version = "0.7.1", features = ["serde_json"]}
rust-bert = { git = "https://github.com/guillaume-be/rust-bert", branch = "main" }
thiserror = "1.0.40"
tch = "0.13"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
serde_json = "1.0.96"
typenum = "1.16.0"
hnsw_rs = { git = "https://github.com/ruqqq/hnswlib-rs" }
snafu = "0.7.4"
derive_builder = "0.12.0"
serde = "1.0.164"
reqwest = { version = "0.11.18", features = [ "json" ]}

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false
