[package]
name = "cedar"
authors = ["Tirth Jain <jaintirth24@gmail.com>", "Ayush Singh Bhandari"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "In memory vector database for semantic search in Rust"
repository = "https://github.com/hedonhermdev"
readme = "README.md"

[dependencies]
duckdb = { version = "0.7.1", features = ["serde_json"]}
rust-bert = "0.21.0"
thiserror = "1.0.40"
tch = "0.13"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
serde_json = "1.0.96"
typenum = "1.16.0"
hnsw_rs = "0.1.19"
snafu = "0.7.4"
derive_builder = "0.12.0"
serde = "1.0.164"
reqwest = { version = "0.11.18", features = [ "json" ]}

[patch.crates-io]
hnsw_rs = { git = "https://github.com/ruqqq/hnswlib-rs", rev = "018a296" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false
